[package]
name = "forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9.0"
bytes = "1.10.1"
tokio-util = { version = "0.7.14", features = ["codec"] }
futures = "0.3.31"
md5 = "0.7.0"

moka = { version = "0.12.8", features = ["sync", "future"] }
crossbeam-queue = "0.3.12"
